Added icons to all dropdown options in Contratti and Richieste Aziende tabs

--- a/public/admin-panel.html
+++ b/public/admin-panel.html
@@ -1823,7 +1823,7 @@
                         <div class="filter-group">
                             <label>Stato</label>
                             <select id="org-filter-status" class="enhanced-select" onchange="applyOrgFilters()">
-                                <option value="">Tutti gli stati</option>
+                                <option value="">📋 Tutti gli stati</option>
                                 <option value="pending">⏳ Da Contattare</option>
                                 <option value="approved">✅ Approvate</option>
                                 <option value="completed">🎉 Completate (con codice)</option>
@@ -1833,7 +1833,7 @@
                         <div class="filter-group">
                             <label>Ha Referral</label>
                             <select id="org-filter-referral" class="enhanced-select" onchange="applyOrgFilters()">
-                                <option value="">Tutti</option>
+                                <option value="">📊 Tutti</option>
                                 <option value="yes">✅ Con Referral</option>
                                 <option value="no">❌ Senza Referral</option>
                             </select>
@@ -1958,12 +1958,12 @@
                         <div class="filter-group">
                             <label>Stato</label>
                             <select id="contracts-filter-status" onchange="filterContracts()" class="enhanced-select">
-                                <option value="">Tutti</option>
-                                <option value="active">Attivi</option>
-                                <option value="expiring">In Scadenza</option>
-                                <option value="expired">Scaduti</option>
-                                <option value="cancelled">Cancellati</option>
-                                <option value="renewed">Rinnovati</option>
+                                <option value="">📋 Tutti</option>
+                                <option value="active">✅ Attivi</option>
+                                <option value="expiring">⚠️ In Scadenza</option>
+                                <option value="expired">❌ Scaduti</option>
+                                <option value="cancelled">🚫 Cancellati</option>
+                                <option value="renewed">🔄 Rinnovati</option>
                             </select>
                         </div>
                         <div class="filter-group search-box">
