Fix logout menu - Aggiunta classe dropdown-menu-item al logout in promotions.html + cursor pointer

--- a/public/promotions.html
+++ b/public/promotions.html
@@ -948,7 +948,7 @@
                         <a href="/public/favorites.html" class="dropdown-menu-item">
                             <span>❤️</span><span>Preferiti</span>
                         </a>
-                        <div id="logout-menu-item" class="logout-item">
+                        <div id="logout-menu-item" class="dropdown-menu-item logout-item">
                             <span>🚪</span><span>Esci</span>
                         </div>
                     `;
