🐛 Fix: Errore 406 query organizations - Usato maybeSingle() invece di single()
Problema: GET organizations restituiva 406 Not Acceptable quando l'utente non è un'organizzazione
Causa: .single() richiede esattamente 1 risultato, fallisce se 0
Soluzione: Cambiato a .maybeSingle() che accetta 0 o 1 risultato

Files modificati:
- promotions.html: line 809
- dashboard.html: line 821

Ora la query non genera più errori 406 per utenti normali ✅

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -817,11 +817,11 @@
             }
             
             // Check if user is an organization - redirect to org dashboard
-            const { data: orgData } = await supabase
+            const { data: orgData, error: orgError } = await supabase
                 .from('organizations')
                 .select('id')
                 .eq('id', session.user.id)
-                .single();
+                .maybeSingle();
             
             if (orgData) {
                 // This is an organization, redirect to org dashboard
