🐛 Fix: Errore 406 query user_points - Usato maybeSingle()
Problema: GET user_points restituiva 406 quando utente non ha record punti
Causa: .single() fallisce con 406 se trova 0 risultati
Soluzione: Cambiato a .maybeSingle() che accetta 0 o 1 risultato

File: dashboard.html line 1587
- Rimosso controllo errore code PGRST116 (non più necessario)
- maybeSingle() restituisce null se nessun record (nessun errore)

✅ Ora la query non genera più errori 406 per utenti senza punti

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1584,9 +1584,9 @@
                     .from('user_points')
                     .select('*')
                     .eq('user_id', userId)
-                    .single();
+                    .maybeSingle();
                 
-                if (pointsError && pointsError.code !== 'PGRST116') {
+                if (pointsError) {
                     throw pointsError;
                 }
                 
