--- a/public/admin-panel.html
+++ b/public/admin-panel.html
@@ -3592,8 +3592,17 @@
         
         // Logout
         window.logout = async function() {
-            await supabase.auth.signOut();
-            window.location.href = '/index.html';
+            try {
+                localStorage.clear();
+                sessionStorage.clear();
+                await supabase.auth.signOut({ scope: 'global' });
+                window.location.replace('/index.html');
+            } catch (error) {
+                console.error('Logout error:', error);
+                localStorage.clear();
+                sessionStorage.clear();
+                window.location.replace('/index.html');
+            }
         };
 
         // Organization Requests Functions
