--- a/public/favorites.html
+++ b/public/favorites.html
@@ -483,8 +483,17 @@
                     // Logout handler
                     dropdown.querySelector('#logout-link').addEventListener('click', async (e) => {
                         e.preventDefault();
-                        await supabase.auth.signOut();
-                        window.location.href = '/index.html';
+                        try {
+                            localStorage.clear();
+                            sessionStorage.clear();
+                            await supabase.auth.signOut({ scope: 'global' });
+                            window.location.replace('/index.html');
+                        } catch (error) {
+                            console.error('Logout error:', error);
+                            localStorage.clear();
+                            sessionStorage.clear();
+                            window.location.replace('/index.html');
+                        }
                     });
                 }
                 
