--- a/public/organization-dashboard.html
+++ b/public/organization-dashboard.html
@@ -611,8 +611,17 @@
         }
         
         async function logout() {
-            await supabase.auth.signOut();
-            window.location.href = '/index.html';
+            try {
+                localStorage.clear();
+                sessionStorage.clear();
+                await supabase.auth.signOut({ scope: 'global' });
+                window.location.replace('/index.html');
+            } catch (error) {
+                console.error('Logout error:', error);
+                localStorage.clear();
+                sessionStorage.clear();
+                window.location.replace('/index.html');
+            }
         }
         
         // Initialize
