--- a/public/promotion-detail.html
+++ b/public/promotion-detail.html
@@ -431,8 +431,17 @@
         
         window.logout = async function(e) {
             e.preventDefault();
-            await supabase.auth.signOut();
-            window.location.href = '/index.html';
+            try {
+                localStorage.clear();
+                sessionStorage.clear();
+                await supabase.auth.signOut({ scope: 'global' });
+                window.location.replace('/index.html');
+            } catch (error) {
+                console.error('Logout error:', error);
+                localStorage.clear();
+                sessionStorage.clear();
+                window.location.replace('/index.html');
+            }
         };
         
         // Initialize
