🔍 Add console logger per catturare errori veloci

--- a/index.html
+++ b/index.html
@@ -241,6 +241,9 @@
         }
     </style>
     
+    <!-- Console Logger (DEVE essere PRIMO) -->
+    <script src="assets/js/console-logger.js"></script>
+    
     <!-- Config -->
     <script src="assets/js/config.js"></script>
 </head>
