🐛 Fix MLM modals not opening - add .active class CSS

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1770,6 +1770,10 @@
             animation: fadeIn 0.3s ease;
         }
 
+        .mlm-modal.active {
+            display: flex;
+        }
+
         @keyframes fadeIn {
             from { opacity: 0; }
             to { opacity: 1; }
