✨ Add forgot password link in login modal

--- a/index.html
+++ b/index.html
@@ -833,6 +833,12 @@
                         </div>
 
                         <button type="submit" class="form-btn form-btn-primary">Accedi</button>
+                        
+                        <div style="text-align: center; margin-top: 15px;">
+                            <a href="#" onclick="LoginModal.showForgotPassword(event)" style="color: #dc2626; text-decoration: none; font-size: 14px; transition: opacity 0.3s;">
+                                🔑 Password dimenticata?
+                            </a>
+                        </div>
                     </form>
 
                     <div class="form-loading" id="loginLoading">
