✨ Add temporary API to set admin passwords

--- a/public/admin-panel.html
+++ b/public/admin-panel.html
@@ -5062,9 +5062,9 @@
                     <td>
                         <div style="display: flex; gap: 8px;">
                             <button 
-                                onclick="resetUserPassword('${user.id}', '${user.email}')" 
+                                onclick="showSetPasswordModal('${user.id}', '${user.email}')" 
                                 style="padding: 6px 12px; background: #3b82f6; color: white; border: none; border-radius: 6px; cursor: pointer; font-size: 13px;"
-                                title="Reset password">
+                                title="Imposta password">
                                 🔑
                             </button>
                             <button 
