🔍 Migliora debug log

--- a/public/set-admin-password.html
+++ b/public/set-admin-password.html
@@ -228,6 +228,7 @@
                 
                 // Debug: log della risposta completa
                 console.log('🔍 Response completa:', data);
+                console.log('🔍 Debug info:', JSON.stringify(data.debug, null, 2));
                 
                 if (!response.ok) {
                     throw new Error(data.error || 'Errore durante l\'impostazione della password');
